title added image text detection

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Quickstart'
+title: 'Image Text Detection'
 description: 'Start building awesome documentation in under 5 minutes'
 ---
 
