added json code for dropdown in requests

--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -51,6 +51,34 @@ The text detection and extraction capability of ImageCon V2 utilizes advanced ma
 By combining sophisticated image processing techniques, OCR algorithms, and advanced computer vision models, ImageCon V2's text detection and extraction capability provides a robust and reliable solution for uncovering machine-readable text from images. This enables a wide range of applications, from visual search and content analysis to navigation assistance and sensitive information filtering.
 
 ## Request
+```json
+"navigation": {
+  "dropdowns": [
+    {
+      "dropdown": "Documentation",
+      "icon": "book-open",
+      "pages": [
+        "quickstart",
+        "development",
+        "navigation"
+      ]
+    }
+    {
+      "dropdown": "API References",
+      "icon": "sqaure-terminal",
+      "pages": [
+        "api-reference/get",
+        "api-reference/post",
+        "api-reference/delete"
+      ]
+    }
+    {
+      "dropdown": "Blog",
+      "href": "https://external-link.com/blog"
+    }
+  ]
+}
+```
 
 ### Singleline
 
