--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -51,33 +51,15 @@ The text detection and extraction capability of ImageCon V2 utilizes advanced ma
 By combining sophisticated image processing techniques, OCR algorithms, and advanced computer vision models, ImageCon V2's text detection and extraction capability provides a robust and reliable solution for uncovering machine-readable text from images. This enables a wide range of applications, from visual search and content analysis to navigation assistance and sensitive information filtering.
 
 ## Request
-```json
-"navigation": {
-  "dropdowns": [
-    {
-      "dropdown": "Documentation",
-      "icon": "book-open",
-      "pages": [
-        "quickstart",
-        "development",
-        "navigation"
-      ]
-    }
-    {
-      "dropdown": "API References",
-      "icon": "sqaure-terminal",
-      "pages": [
-        "api-reference/get",
-        "api-reference/post",
-        "api-reference/delete"
-      ]
-    }
-    {
-      "dropdown": "Blog",
-      "href": "https://external-link.com/blog"
-    }
-  ]
-}
+<AccordionGroup>
+    <Accordion title='Authorization: Bearer Token'>
+    Provide your bearer token in the `Authorization` header when making requests to protected resources.
+    Example `Authorization: Bearer 2f68dbbf-519d-4f01-9636-e2421b68f379`
+  </Accordion>
+</AccordionGroup>
+
+```Body Param `multipart/form-data`
+
 ```
 
 ### Singleline
