added card groups and icon

--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -58,11 +58,26 @@ By combining sophisticated image processing techniques, OCR algorithms, and adva
   </Accordion>
 </AccordionGroup>
 
-```Body Param `multipart/form-data`
+Body Param `multipart/form-data`
 
-```
 
-### Singleline
+## Request samples
+<CardGroup cols={13}>
+  <Card
+    title="Terminal"
+    <i class="fa-solid fa-terminal"></i>
+    href="https://mintlify.com/docs/quickstart"
+  >
+    Get your docs set up locally for easy development
+  </Card>
+  <Card
+    title="Preview Changes"
+    icon="image"
+    href="https://mintlify.com/docs/development"
+  >
+    Preview your changes before you push to make sure they're perfect
+  </Card>
+</CardGroup>
 
 To create a blockquote, add a `>` in front of a paragraph.
 
