card group error solve

--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -65,7 +65,7 @@ Body Param `multipart/form-data`
 <CardGroup cols={13}>
   <Card
     title="Terminal"
-    <i class="fa-solid fa-terminal"></i>
+    icon="Terminal"
     href="https://mintlify.com/docs/quickstart"
   >
     Get your docs set up locally for easy development
