--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -58,34 +58,15 @@ By combining sophisticated image processing techniques, OCR algorithms, and adva
   </Accordion>
 </AccordionGroup>
 
-Body Param `multipart/form-data`
+| Body Params |  `multipart/form-data`                |
+| --------    | ------------------------------------- |
+| `Image` file| <Warning>                             |
+|             |      required                         |
+|             | </Warning>                            |
+| Age         | Reported age                          |
+| Joined      | Whether the user joined the community |
 
 
-## Request samples
-<CardGroup cols={13}>
-  <Card
-    title="Terminal"
-    icon="Terminal"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-To create a blockquote, add a `>` in front of a paragraph.
-
-> Dorothy followed her through many of the beautiful rooms in her castle.
-
-```md
-> Dorothy followed her through many of the beautiful rooms in her castle.
-```
 
 ### Multiline
 
