--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -60,9 +60,7 @@ By combining sophisticated image processing techniques, OCR algorithms, and adva
 
 | Body Params |  `multipart/form-data`                |
 | --------    | ------------------------------------- |
-| `Image` file| <Warning>                             |
-|             |      required                         |
-|             | </Warning>                            |
+| `Image` file| <Warning>  required   </Warning>      |
 | Age         | Reported age                          |
 | Joined      | Whether the user joined the community |
 
