made changes in config doc for color and body param table use of tooltip

--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -58,11 +58,11 @@ By combining sophisticated image processing techniques, OCR algorithms, and adva
   </Accordion>
 </AccordionGroup>
 
-| Body Params |  `multipart/form-data`                |
-| --------    | ------------------------------------- |
-| `Image` file| <Warning>  required   </Warning>      |
-| Age         | Reported age                          |
-| Joined      | Whether the user joined the community |
+| Body Params                                                                      |  `multipart/form-data`                                                                    |
+| -------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------|                                                     
+| `Image` file                                                                     | <ResponseField name="required" type="string"></ResponseField>                             |                 
+| <Tooltip tip="Copy to clipboard">`output_type`</Tooltip> enum<string>            | <ResponseField name="required" type="string"></ResponseField>                             |
+| <LaTeX> Allowed values: <Tooltip tip="|Enums   | description |">`JSON`</Tooltip> |                                                                                           |
 
 
 
