removed table from tooltip

--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -62,7 +62,7 @@ By combining sophisticated image processing techniques, OCR algorithms, and adva
 | ---------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------|                                                     
 | `Image` file                                                                             | <ResponseField name="required" type="string"></ResponseField>                             |                 
 | <Tooltip tip="Copy to clipboard">`output_type`</Tooltip> enum<string>                    | <ResponseField name="required" type="string"></ResponseField>                             |
-| <LaTeX> Allowed values: <Tooltip tip=|Enums   | description |>`JSON`</Tooltip></Latex>   |                                                                                           |
+| <LaTeX> Allowed values: <Tooltip tip="Table">`JSON`</Tooltip></Latex>                    |                                                                                           |
 
 
 
