changed parameter in response field

--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -60,7 +60,7 @@ By combining sophisticated image processing techniques, OCR algorithms, and adva
 
 | Body Params                                                                              |  `multipart/form-data`                                                                    |
 | ---------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------|                                                     
-| `Image` file                                                                             | <ResponseField name="required" type="string"></ResponseField>                             |                 
+| `Image` file                                                                             | <ResponseField name="required" type="data"></ResponseField>                             |                 
 
 
 
