--- a/AI Models/Face Detection.mdx
+++ b/AI Models/Face Detection.mdx
@@ -31,16 +31,16 @@ The face detection models used by ImageCon V2 are trained on real-world images o
 
 ## Use Cases
 
-*Facial Recognition and Identity Verification: Face detection and analysis AI can be used for facial recognition tasks, allowing for identity verification or authentication. This can be valuable in access control systems, secure authentication processes, or personalized user experiences.
-*Emotion Analysis and User Experience Enhancement: By analyzing facial expressions and predicting emotions, face detection and analysis AI can provide insights into user reactions and sentiments. This information can be leveraged to improve user experiences, personalize content, or tailor marketing strategies.
-*Audience Analysis and Demographics: Face detection and analysis AI's age and gender prediction capabilities can assist in analyzing the demographics of an audience or customer base. This information can be valuable for targeted marketing campaigns, product development, or understanding customer preferences.
-*Content Moderation: The face analysis capabilities of face detection and analysis AI can be utilized for content moderation purposes, identifying and flagging inappropriate or offensive images or videos that violate community guidelines or policies.
-*Personalized Recommendations: By analyzing facial attributes such as age, gender, and emotions, face detection and analysis AI can contribute to personalized recommendation systems. This can be used in e-commerce platforms, streaming services, or content delivery systems to provide tailored recommendations based on user characteristics.
-*Market Research and Advertising: The facial analysis capabilities of face detection and analysis AI can aid in market research by providing insights into consumer reactions to advertisements, product packaging, or promotional materials. This information can guide advertising strategies and help optimize marketing campaigns.
-*Augmented Reality (AR) and Virtual Reality (VR): Face detection and analysis AI's face analysis capabilities can enhance AR and VR experiences by tracking facial landmarks and expressions. This enables interactive and immersive virtual overlays or animations that respond to user actions and emotions.
-*Retail Analytics and Customer Engagement: Face detection and analysis AI can be used in retail environments to analyze customer behavior, track foot traffic, and measure engagement with products or displays. This information can help retailers optimize store layouts, improve customer experiences, and increase sales conversions.
-*Security and Surveillance: Face detection and analysis AI's facial recognition capabilities can be employed in security and surveillance systems to identify individuals, track their movements, and enhance overall safety. This can be valuable in airports, public transportation, high-security areas, or access control systems.
-*Event Management and Attendee Experience: Face detection and analysis AI can be utilized in event management to analyze attendee demographics, monitor crowd sizes, and track attendee engagement. This information can assist event organizers in tailoring event experiences, optimizing event logistics, and improving overall attendee satisfaction.
+* Facial Recognition and Identity Verification: Face detection and analysis AI can be used for facial recognition tasks, allowing for identity verification or authentication. This can be valuable in access control systems, secure authentication processes, or personalized user experiences.
+* Emotion Analysis and User Experience Enhancement: By analyzing facial expressions and predicting emotions, face detection and analysis AI can provide insights into user reactions and sentiments. This information can be leveraged to improve user experiences, personalize content, or tailor marketing strategies.
+* Audience Analysis and Demographics: Face detection and analysis AI's age and gender prediction capabilities can assist in analyzing the demographics of an audience or customer base. This information can be valuable for targeted marketing campaigns, product development, or understanding customer preferences.
+* Content Moderation: The face analysis capabilities of face detection and analysis AI can be utilized for content moderation purposes, identifying and flagging inappropriate or offensive images or videos that violate community guidelines or policies.
+* Personalized Recommendations: By analyzing facial attributes such as age, gender, and emotions, face detection and analysis AI can contribute to personalized recommendation systems. This can be used in e-commerce platforms, streaming services, or content delivery systems to provide tailored recommendations based on user characteristics.
+* Market Research and Advertising: The facial analysis capabilities of face detection and analysis AI can aid in market research by providing insights into consumer reactions to advertisements, product packaging, or promotional materials. This information can guide advertising strategies and help optimize marketing campaigns.
+* Augmented Reality (AR) and Virtual Reality (VR): Face detection and analysis AI's face analysis capabilities can enhance AR and VR experiences by tracking facial landmarks and expressions. This enables interactive and immersive virtual overlays or animations that respond to user actions and emotions.
+* Retail Analytics and Customer Engagement: Face detection and analysis AI can be used in retail environments to analyze customer behavior, track foot traffic, and measure engagement with products or displays. This information can help retailers optimize store layouts, improve customer experiences, and increase sales conversions.
+* Security and Surveillance: Face detection and analysis AI's facial recognition capabilities can be employed in security and surveillance systems to identify individuals, track their movements, and enhance overall safety. This can be valuable in airports, public transportation, high-security areas, or access control systems.
+* Event Management and Attendee Experience: Face detection and analysis AI can be utilized in event management to analyze attendee demographics, monitor crowd sizes, and track attendee engagement. This information can assist event organizers in tailoring event experiences, optimizing event logistics, and improving overall attendee satisfaction.
 
 ## Request
 <AccordionGroup>
@@ -52,6 +52,6 @@ The face detection models used by ImageCon V2 are trained on real-world images o
 
 | Body Params                                                                                 |  `multipart/form-data`                                                                    |
 | ----------------------------------------------------------------------------------------    | ------------------------------------------------------------------------------------------|                                                     
-| `Image` file                                                                                | <ResponseField name="required"></ResponseField>                                           |
+| `Image` file                        <ResponseField name="required"></ResponseField>         |                                                                                           |
 |  Example:`file:///Users/sagnikghosh/Downloads/WhatsApp Image 2023-09-21 at 10.45.35 AM.jpeg`|                                                                                           |
 
