--- a/AI Models/Content Moderation/Image Moderation.mdx
+++ b/AI Models/Content Moderation/Image Moderation.mdx
@@ -3,7 +3,7 @@ title: 'Image Moderation'
 ---
 
 ## Image Moderation AI (Powered by ImageCon V2)
-** *Moderate images for adult content, violence, spoof, medical content, etc. **
+**Moderate images for adult content, violence, spoof, medical content, etc.**
 
 The Image Moderation API developed by WorqHat, powered by the advanced ImageCon V2 model, offers a robust solution for detecting and filtering inappropriate, unwanted, or offensive content in images. This API is highly versatile and can be effectively utilized in various applications, including social media platforms, broadcast media, advertising, and e-commerce. Its primary goal is to ensure a safer user experience, provide brand safety assurances to advertisers, and ensure compliance with local and global regulations.
 
@@ -37,7 +37,7 @@ By leveraging deep learning techniques and extensive training on diverse dataset
 | Hate Symbols            | `Nazi Party` , `White Supremacy` , `Extremist`                                                                                                    |
 | Gambling                | `Gambling`                                                                                                                                        |
 
-> *Tip:* Tip: The Image Moderation API can be used to detect and flag inappropriate or offensive content in images, videos, and text.However, it isn't an authority on, and doesn't in any way claim to be an exhaustive filter of, inappropriate or offensive content. Additionally, the image moderation AI's don't detect whether an image includes illegal content, such as child pornography. If you believe that an image contains illegal content, please report it to the appropriate authorities.
+> *Tip:* The Image Moderation API can be used to detect and flag inappropriate or offensive content in images, videos, and text.However, it isn't an authority on, and doesn't in any way claim to be an exhaustive filter of, inappropriate or offensive content. Additionally, the image moderation AI's don't detect whether an image includes illegal content, such as child pornography. If you believe that an image contains illegal content, please report it to the appropriate authorities.
 
 ## Use Cases
 
