--- a/AI Models/Content Moderation/Text Moderation.mdx
+++ b/AI Models/Content Moderation/Text Moderation.mdx
@@ -4,7 +4,7 @@ title: 'Text Moderation'
 
 ## Text and Content Moderation AI
 
-*Content Moderation AI is a powerful tool that can be used to detect and filter out inappropriate content from your website or app.*
+**Content Moderation AI is a powerful tool that can be used to detect and filter out inappropriate content from your website or app.**
 
 Introducing the new Moderation AI endpoint by WorqHat, powered by the advanced AiCon V2 model. This powerful tool is designed to support developers in safeguarding their applications by offering fast and accurate content moderation.
 
