--- a/AI Models/Text Generation/Alpha Models(Text Only).mdx
+++ b/AI Models/Text Generation/Alpha Models(Text Only).mdx
@@ -76,6 +76,7 @@ WorqHat AiCon V4 API allows you to generate text using only text input. You can 
 * `aicon-v4-alpha-160824`: A better version of the `aion-v4-nano-160824` model which is trained on live data, providing up-to-date insights and knowledge. It's ideal for tasks that require real-time information, such as news analysis, market research, or staying informed on current events
 
 **Choose Your Response Style:**
+
 You have the option to either stream the response (`stream_data = true`) or wait for the entire result to be generated (`stream_data = false`).
 
 <Tabs>
@@ -151,4 +152,4 @@ fetch("https://api.worqhat.com/api/ai/content/v4", requestOptions)
 **Try out other Capabilities of the WorqHat API**
 * Build Multiturn COnversations or Chat Applications by having the model maintain history by default
 * Generate text or code outputs from mutimodal inputs (including text, images, PDFs, video, and audio)Multimodal Input (Non-Streaming)
-* Fetch real world information and data using the [Alpha Models(Text Only)](AI Models/Text Generation/Alpha Models (Text Only))
+* Fetch real world information and data using the [Alpha Models(Text Only)](/AI Models/Text Generation/Alpha Models (Text Only))
