--- a/AI Models/Text Generation/Finetuned Models (Multimodal Input).mdx
+++ b/AI Models/Text Generation/Finetuned Models (Multimodal Input).mdx
@@ -1,24 +1,22 @@
 ---
-title: 'Multimodal Input Conversational'
+title: 'Finetuned Models (Multimodal Input)'
 ---
 
 <AccordionGroup>
     <Accordion title='Before You Begin'>
     1. **Set up a new or existing WorqHat Workspace:** When you start, we'll add a $5 credit to your account, valid for the next 14 days, to help you get started with your experimentation. 
     2. **Create a New API Key:** Head to the AI Studio Page and generate a new API key. Remember to whitelist your Localhost or production domain for security purposes.
-    3. **Add the API Key Reference:** Include your API key in your application file. For detailed instructions and guidance, visit the [Quickstart] (https://docs.worqhat.com/605330m0) page.
+    3. **Add the API Key Reference:** Include your API key in your application file. For detailed instructions and guidance, visit the Quickstart page.
   </Accordion>
 </AccordionGroup>
 
-## Generate from Multimodal Inputs
+## Generate from Text-Only Input
+WorqHat AiCon V4 Custom Model API allows you to generate text using only text input. You can choose from a variety of base models, each with its own strengths:
 
-WorqHat AiCon V4 API allows you to generate text using only text input. You can choose from a variety of models, each with its own strengths:
-* `aion-v4-nano-160824` **(finetuned included):** Ideal for quick and efficient text generation, especially when resources are limited.
-* `aion-v4-large-160824` **(finetuned included):** Our smartest and highest accuracy model, suitable for a wide range of text generation tasks, complex though and reasoning along with mathematical solutions.
-* `aion-v4-alpha-160824`: A better version of the `aion-v4-nano-160824` model which is trained on live data, providing up-to-date insights and knowledge. It's ideal for tasks that require real-time information, such as news analysis, market research, or staying informed on current events
+* `aicon-v4-nano-160824` **(finetuned included):** Ideal for quick and efficient text generation, especially when resources are limited.
+* `aicon-v4-large-160824` **(finetuned included):**  Our smartest and highest accuracy model, suitable for a wide range of text generation tasks, complex thoughts and reasoning along with mathematical solutions.
 
 **Choose Your Response Style:**
-
 You have the option to either stream the response (`stream_data = true`) or wait for the entire result to be generated (`stream_data = false`).
 
 <Tabs>
@@ -42,7 +40,6 @@ You have the option to either stream the response (`stream_data = true`) or wait
       formdata.append('files', file);
     }
 
-    formdata.append('model', 'aicon-v4-nano-160824');
     formdata.append('stream_data', 'true');
 
     var requestOptions = {
@@ -52,7 +49,7 @@ You have the option to either stream the response (`stream_data = true`) or wait
       redirect: 'follow',
     };
 
-    fetch('https://api.worqhat.com/api/ai/content/v4', requestOptions)
+    fetch('https://api.worqhat.com/api/ai/content/v4/{modelType}/{modelId}', requestOptions)
       .then(response => response.text())
       .then(result => {
           console.log(result);
@@ -85,7 +82,6 @@ You have the option to either stream the response (`stream_data = true`) or wait
       formdata.append('files', file);
     }
 
-    formdata.append('model', 'aicon-v4-nano-160824');
     formdata.append('stream_data', 'false');
 
     var requestOptions = {
@@ -116,5 +112,5 @@ You have the option to either stream the response (`stream_data = true`) or wait
 * Modify the `prompt` to provide your text input.
 
 **Try out other Capabilities of the WorqHat API**
-* Build Multiturn Conversations or Chat Applications by having the model maintain history by default [Text Only Conversational](/AI Models/Text Generation/Multimodal Input Conversational)
-* Fetch real world information and data using the Alpha Models [Alpha Models(Text Only)](/AI Models/Text Generation/Alpha Models (Text Only))
+* Build Multiturn Conversations or Chat Applications by having the model maintain history by default [Text Only Conversational](AI Models/Text Generation/Multimodal Input Conversational)
+* Fetch real world information and data using the Alpha Models [Alpha Models(Text Only)](AI Models/Text Generation/Alpha Models (Text Only))
