--- a/AI Models/Text Generation/Multimodal Input Conversational.mdx
+++ b/AI Models/Text Generation/Multimodal Input Conversational.mdx
@@ -116,5 +116,5 @@ You have the option to either stream the response (`stream_data = true`) or wait
 * Modify the `prompt` to provide your text input.
 
 **Try out other Capabilities of the WorqHat API**
-* Build Multiturn Conversations or Chat Applications by having the model maintain history by default [Text Only Conversational](/AI Models/Text Generation/Multimodal Input Conversational)
-* Fetch real world information and data using the Alpha Models [Alpha Models(Text Only)](/AI Models/Text Generation/Alpha Models (Text Only))
+* Build Multiturn Conversations or Chat Applications by having the model maintain history by default Text Only Conversational
+* Fetch real world information and data using the Alpha Models Alpha Models(Text Only)
