--- a/AI Models/Text Generation/Search V3.mdx
+++ b/AI Models/Text Generation/Search V3.mdx
@@ -37,6 +37,8 @@ Here are the steps to start training your data:
 
 By following these steps and providing high-quality, relevant training data, you empower the Search V3 AI to deliver more precise and contextually appropriate search results, tailored to the specific needs and nuances of your application.
 
+<img height="200" src="images/worqhat-text gen-searchv3.png" />
+
 ## Use Cases
 * E-commerce Product Discovery: Semantic search can greatly enhance the product discovery process in e-commerce platforms. By understanding the meaning and intent behind user queries, semantic search can provide more relevant and accurate search results, improving the overall shopping experience.
 * Content Management and Knowledge Base: Semantic search can be used to power content management systems and knowledge bases, allowing users to search and retrieve information based on their intended meaning rather than relying solely on keyword matching. This enables users to find the most relevant and contextually accurate content.
