--- a/AI Models/Text Generation/Finetuned model (Text Only).mdx
+++ b/AI Models/Text Generation/Finetuned model (Text Only).mdx
@@ -90,4 +90,4 @@ fetch("https://api.worqhat.com/api/ai/content/v4/{modelType}/{modelId}", request
 **Try out other Capabilities of the WorqHat API**
 * Build Multiturn COnversations or Chat Applications by having the model maintain history by default Text Only Conversational
 * Generate text or code outputs from mutimodal inputs (including text, images, PDFs, video, and audio)Multimodal Input (Non-Streaming)
-* Fetch real world information and data using the [Alpha Models(Text Only)](AI Models/Text Generation/Alpha Models (Text Only))
+* Fetch real world information and data using the Alpha Models(Text Only)
