fixing image bug

--- a/AI Models/Text Generation/Search V3.mdx
+++ b/AI Models/Text Generation/Search V3.mdx
@@ -37,7 +37,7 @@ Here are the steps to start training your data:
 
 By following these steps and providing high-quality, relevant training data, you empower the Search V3 AI to deliver more precise and contextually appropriate search results, tailored to the specific needs and nuances of your application.
 
-<img height="200" src="images/worqhat-text gen-searchv3.png" />
+<img height="200" src="/images/worqhat-text gen-searchv3.png" />
 
 ## Use Cases
 * E-commerce Product Discovery: Semantic search can greatly enhance the product discovery process in e-commerce platforms. By understanding the meaning and intent behind user queries, semantic search can provide more relevant and accurate search results, improving the overall shopping experience.
