--- a/AI Models/Text Generation/Alpha Models(Text Only).mdx
+++ b/AI Models/Text Generation/Alpha Models(Text Only).mdx
@@ -47,7 +47,7 @@ Our AiCon Alpha models are versatile and can be applied to a wide range of use c
 > By following these steps and reaching out to WorqHat through the provided channels, you can begin the application process for the WorqHat Startup Fund and potentially access the support and resources offered to early-stage startups.
 
 * **Summarizing & QnA on YouTube Videos:**
-> **Question:** https://www.youtube.com/watch?v=rXD0Xiyc0kM can you summarize this video for me
+> **Question:** https://www.youtube.com/watch?v=rXD0Xiyc0kM can you summarize this video for me?
 
 > Answer: In the video titled "Best Framework for Web Development - The Bitter Truth," the author discusses various technologies and frameworks used in web development. The key points covered in the video are:
 > 1. Importance of choosing the simplest technology for your project based on its complexity.
