--- a/AI Models/Text Generation/Search V3.mdx
+++ b/AI Models/Text Generation/Search V3.mdx
@@ -2,13 +2,13 @@
 title: 'Search V3'
 ---
 
-## Search V3 (Search through Meanings and Context)'
+## Search V3 (Search through Meanings and Context)
 
 **Meaning and Context Based Search experience and Recommendations powered by AI**
 
 The Search V3 API is a powerful and advanced AI-driven solution designed to enhance the search experience by providing meaning-based search capabilities. With its cutting-edge natural language processing techniques, this API goes beyond traditional keyword matching to understand the context, intent, and semantic meaning behind user queries.
 
-By analyzing user content and leveraging sophisticated algorithms, the Search V3 model extracts key concepts and relationships to deliver highly relevant search results. It takes into account the nuances of language, including synonyms, word variations, and even typos, ensuring robust search accuracy and comprehensiveness.
+By analyzing user content with sophisticated algorithms, the Search V3 model extracts key concepts and relationships to deliver relevant results. It accounts for language nuances such as synonyms, word variations, and typos to ensure robust search accuracy.
 
 With its content analysis and user intent recognition capabilities, the Search V3 API provides intelligent search capabilities that adapt and learn from user interactions. This enables personalized search experiences, empowering users to find the most relevant information quickly and effortlessly.
 
@@ -45,21 +45,20 @@ By following these steps and providing high-quality, relevant training data, you
 * Customer Support and Help Desk: Semantic search can assist in customer support and help desk systems by understanding user queries and providing precise and tailored responses. It can analyze the intent of customer inquiries and retrieve relevant information or suggest solutions based on past interactions or known knowledge.
 * Research and Information Retrieval: Semantic search can be valuable in research applications, enabling users to find relevant research papers, articles, and documents based on their intended meaning rather than relying on exact keyword matches. This enhances the efficiency and accuracy of information retrieval in academic and scientific domains.
 * Enterprise Search: In large organizations, semantic search can improve enterprise search capabilities by understanding user queries and retrieving the most relevant and contextually accurate information from various internal data sources. This enhances knowledge sharing, decision-making, and collaboration within the organization.
-* Job Search and Recruitment: Semantic search can enhance job search platforms by understanding the job requirements and candidate profiles, enabling more accurate matching between job seekers and job postings. It can take into account factors such as skills, experience, and qualifications to provide more targeted and relevant job recommendations.
+* Job Search and Recruitment: Semantic search can enhance job search platforms by understanding the job requirements and candidate profiles, enabling more accurate matching between jobseekers and job postings. It considers factors like skills, experience, and qualifications to provide more targeted and relevant job recommendations.
 * Legal and Compliance Search: Semantic search can assist in legal research and compliance-related tasks by understanding the legal language and identifying relevant case laws, statutes, and regulations. This can streamline legal research processes and improve the accuracy and efficiency of compliance-related tasks.
 * Personalized Recommendations: Semantic search can power recommendation engines in various domains, such as e-commerce, media, and entertainment. By understanding user preferences, behavior, and context, semantic search can provide personalized recommendations for products, movies, music, and more, enhancing the user experience and driving engagement.
 * Healthcare Information Retrieval: Semantic search can be used in healthcare applications to retrieve relevant medical information, research papers, and patient records based on their intended meaning. This can support clinical decision-making, medical research, and patient care by providing accurate and contextually appropriate information.
 * Data Exploration and Analytics: Semantic search can enable users to explore and analyze large datasets by understanding the context and meaning of the data. It can help users discover insights, patterns, and relationships in complex data, facilitating data-driven decision-making and exploratory data analysis.
 
 ## How to use Search V3 AI
-You can use the following Endpoints on any Codebase, including client side codebases as long as you are able to send the Headers and the Request Body to the API Endpoint. It's that easy! Just send a POST Request to the API Endpoint with the Headers and the Request Body, and you are good to go!
+You can use the following Endpoints on any Codebase, including client-side codebases as long as you can send the Headers and the Request Body to the API Endpoint. It's that easy! Just send a POST Request to the API Endpoint with the Headers and the Request Body, and you are good to go!
 
 ## Train Your Own Data
 
 The Search V3 AI is a large model that is trained on a large dataset to understand the meanings of word and to understand how words relate with each other.
 
-However, this model is mostly focused on Optimising Time and give quicker responses based on the meaning of what the
-user has asked. That is why, this model is completely dependent on the training data provided by the user. The more training data you provide, the better the model will perform and return a better response on search queries.
+The Search V3 AI is trained on extensive datasets to understand word meanings and their relationships. However, this model is primarily focused on optimizing response times and providing quicker, meaning-based answers to user queries.
 
 <Note>
 This model does not generate content on its own, but it is capable of understanding the meaning of the content provided by the user. It also understands and provides priority scoring to data that you have uploaded previously to the API. This means that if you have uploaded data to the API, and you search for a query that is similar to the data you have uploaded previously, the API will return the data that you have uploaded previously as the top result. It will also return other relevant results that are similar to the question you have asked.
