--- a/AI Models/Text Generation/Finetuned Models (Multimodal Input).mdx
+++ b/AI Models/Text Generation/Finetuned Models (Multimodal Input).mdx
@@ -10,11 +10,12 @@ title: 'Finetuned Models (Multimodal Input)'
   </Accordion>
 </AccordionGroup>
 
-## Generate from Text-Only Input
+## Generate from Multimodal Inputs
 WorqHat AiCon V4 Custom Model API allows you to generate text using only text input. You can choose from a variety of base models, each with its own strengths:
 
 * `aicon-v4-nano-160824` **(finetuned included):** Ideal for quick and efficient text generation, especially when resources are limited.
 * `aicon-v4-large-160824` **(finetuned included):**  Our smartest and highest accuracy model, suitable for a wide range of text generation tasks, complex thoughts and reasoning along with mathematical solutions.
+* `aion-v4-alpha-160824:` A better version of the `aion-v4-nano-160824` model which is trained on live data, providing up-to-date insights and knowledge. It's ideal for tasks that require real-time information, such as news analysis, market research, or staying informed on current events
 
 **Choose Your Response Style:**
 You have the option to either stream the response (`stream_data = true`) or wait for the entire result to be generated (`stream_data = false`).
@@ -59,7 +60,6 @@ You have the option to either stream the response (`stream_data = true`) or wait
           console.log('error', error);
           alert('Error: ' + error);
       });
-});
     ```
   </Tab>
   <Tab title="Without Streaming">
@@ -101,7 +101,6 @@ You have the option to either stream the response (`stream_data = true`) or wait
           console.log('error', error);
           alert('Error: ' + error);
       });
-});
   ```
   </Tab>
 </Tabs>
@@ -113,4 +112,4 @@ You have the option to either stream the response (`stream_data = true`) or wait
 
 **Try out other Capabilities of the WorqHat API**
 * Build Multiturn Conversations or Chat Applications by having the model maintain history by default Text Only Conversational
-* Fetch real world information and data using the Alpha Models Alpha Models(Text Only)
+* Fetch real world information and data using the Alpha Models(Text Only)
